--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,46 @@
+<!--
+George McMullen
+March 25 2021
+Dating home page
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>DATING</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">My Dating Website</a>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="row">
+        <div class="column">
+            <div class="container">
+                <h4 class="text-center">My Dating Website</h4>
+                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <hr>
+                <p class="text-center quote">X said "Lorem ipsum dolor sit amet"</p>
+                <p class="text-center quote">Y said "consectetur adipiscing elit, sed do eiusmod tempor incididunt"</p>
+                <hr>
+                <button class="center">Create Profile</button>
+            </div>
+        </div>
+        <div class="column">
+            <img src="images/people.jpg" class="main-img" alt="people">
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
