--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ ul {
 
 .center {
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
