--- a/views/home.html
+++ b/views/home.html
@@ -14,6 +14,7 @@ Dating home page
 </head>
 <body>
 
+<!-- Nav bar -->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -22,6 +23,7 @@ Dating home page
     </div>
 </nav>
 
+<!-- Container for text and image -->
 <div class="container">
     <div class="row">
         <div class="column">
