Created UI for Info, Profile, and interests pages

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@ Dating home page
     <title>DATING</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/homeStyles.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@ Dating home page
                 <p class="text-center quote">X said "Lorem ipsum dolor sit amet"</p>
                 <p class="text-center quote">Y said "consectetur adipiscing elit, sed do eiusmod tempor incididunt"</p>
                 <hr>
-                <button class="center">Create Profile</button>
+                <a href="info"><button class="center">Create Profile</button></a>
             </div>
         </div>
         <div class="column">
