--- a/views/summary.html
+++ b/views/summary.html
@@ -1,14 +1,10 @@
-<!--
-George McMullen
-March 25 2021
-Dating login page
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>COACH.DATING.LOGIN</title>
+    <title>Title</title>
+
+    <link rel="stylesheet" href="styles/summaryStyles.css">
 </head>
 <body>
 
