--- a/views/profile.html
+++ b/views/profile.html
@@ -22,6 +22,8 @@
 
     <h1>Profile</h1>
 
+    <form action="interests" method="post" class="">
+
     <div class="row">
         <div class="column">
 
@@ -44,9 +46,9 @@
 
             <div>
                 <b>Seeking</b><br>
-                <input type="radio" id="male" name="size" value="male" >
+                <input type="radio" id="male" name="sgender" value="male" >
                 <label for="male">Male</label>
-                <input type="radio" id="female" name="size" value="female" >
+                <input type="radio" id="female" name="sgender" value="female" >
                 <label for="female">Female</label>
             </div>
 
@@ -64,6 +66,8 @@
 
         </div>
     </div>
+
+    </form>
 
 </div>
 </body>
