--- a/views/info.html
+++ b/views/info.html
@@ -48,9 +48,9 @@
 
         <div>
                 <b>Gender</b><br>
-                <input type="radio" id="male" name="male" value="male">
+                <input type="radio" id="male" name="gender" value="male">
                 <label for="male">Male</label>
-                <input type="radio" id="female" name="female" value="female">
+                <input type="radio" id="female" name="gender" value="female">
                 <label for="female">Female</label>
         </div>
 
