--- a/views/interests.html
+++ b/views/interests.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Interests</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="../styles/interestsStyles.css">
+    <link rel="stylesheet" href="styles/interestsStyles.css">
 </head>
 <body>
 
@@ -21,49 +21,51 @@
 <div class="interests-container container">
     <h1>Interests</h1>
 
+    <form action="summary" method="post" class="">
+
     <b>In-door interests</b>
 
     <div class="row">
         <div class="column">
 
-    <input type="checkbox" id="tv" name="tv" value="tv">
+    <input type="checkbox" id="tv" name="indoor[]" value="tv">
     <label for="tv">tv</label>
     <br>
 
-    <input type="checkbox" id="puzzles" name="puzzles" value="puzzles">
+    <input type="checkbox" id="puzzles" name="indoor[]" value="puzzles">
     <label for="puzzles">puzzles</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="movies" name="movies" value="movies">
+    <input type="checkbox" id="movies" name="indoor[]" value="movies">
     <label for="movies">movies</label>
     <br>
 
-    <input type="checkbox" id="reading" name="reading" value="reading">
+    <input type="checkbox" id="reading" name="indoor[]" value="reading">
     <label for="reading">reading</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="cooking" name="cooking" value="cooking">
+    <input type="checkbox" id="cooking" name="indoor[]" value="cooking">
     <label for="cooking">cooking</label>
     <br>
 
-    <input type="checkbox" id="playing cards" name="playing cards" value="playing cards">
+    <input type="checkbox" id="playing cards" name="indoor[]" value="playing cards">
     <label for="playing cards">playing cards</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="board games" name="board games" value="board games">
+    <input type="checkbox" id="board games" name="indoor[]" value="board games">
     <label for="board games">board games</label>
     <br>
 
-    <input type="checkbox" id="video games" name="video games" value="video games">
+    <input type="checkbox" id="video games" name="indoor[]" value="video games">
     <label for="video games">video games</label>
     <br>
 
@@ -77,36 +79,36 @@
     <div class="row">
         <div class="column">
 
-    <input type="checkbox" id="hiking" name="hiking" value="hiking">
+    <input type="checkbox" id="hiking" name="outdoor[]" value="hiking">
     <label for="hiking">hiking</label>
     <br>
 
-    <input type="checkbox" id="biking" name="biking" value="biking">
+    <input type="checkbox" id="biking" name="outdoor[]" value="biking">
     <label for="biking">biking</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="swimming" name="swimming" value="swimming">
+    <input type="checkbox" id="swimming" name="outdoor[]" value="swimming">
     <label for="swimming">swimming</label>
     <br>
 
-    <input type="checkbox" id="collecting" name="collecting" value="collecting">
+    <input type="checkbox" id="collecting" name="outdoor[]" value="collecting">
     <label for="collecting">collecting</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="walking" name="walking" value="walking">
+    <input type="checkbox" id="walking" name="outdoor[]" value="walking">
     <label for="walking">walking</label>
     <br>
 
         </div>
         <div class="column">
 
-    <input type="checkbox" id="climbing" name="climbing" value="climbing">
+    <input type="checkbox" id="climbing" name="outdoor[]" value="climbing">
     <label for="climbing">climbing</label>
     <br>
 
@@ -116,6 +118,8 @@
     <div class="">
         <input class="form-control next-button btn btn-primary" type="submit" value="Next >">
     </div>
+
+    </form>
 </div>
 </body>
 </html>
