--- a/views/home.html
+++ b/views/home.html
@@ -33,8 +33,8 @@ Dating home page
                 <hr>
                 <p class="text-center quote">X said "Lorem ipsum dolor sit amet"</p>
                 <p class="text-center quote">Y said "consectetur adipiscing elit, sed do eiusmod tempor incididunt"</p>
-                <hr>
-                <a href="info"><button class="center">Create Profile</button></a>
+                <hr><br>
+                <button type="button" class="center" onclick="location.href = 'info';">Create Profile</button>
             </div>
         </div>
         <div class="column">
