Fixed bug where the final interests page would throw an error

--- a/views/home.html
+++ b/views/home.html
@@ -29,12 +29,12 @@ Dating home page
         <div class="column">
             <div class="container">
                 <h4 class="text-center">My Dating Website</h4>
-                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="">Hey you! You lonely and miserable and want someone else in your life to talk to and ramble politics and work drama too? Try this dating website!</p>
                 <hr>
-                <p class="text-center quote">X said "Lorem ipsum dolor sit amet"</p>
-                <p class="text-center quote">Y said "consectetur adipiscing elit, sed do eiusmod tempor incididunt"</p>
+                <p class="quote"><b>Scott Travis</b> said "Wow I can't believe how amazing this site is!"</p>
+                <p class="quote"><b>Johnson Dwyane</b> said "Thanks to this dating site, I found the lover of my dreams"</p>
                 <hr><br>
-                <button type="button" class="center" onclick="location.href = 'info';">Create Profile</button>
+                <button type="button" class="center btn btn-primary" onclick="location.href = 'info';">Create Profile</button>
             </div>
         </div>
         <div class="column">
