--- a/views/interests.html
+++ b/views/interests.html
@@ -26,7 +26,11 @@ Dating home page
 <div class="interests-container container">
     <h1>Interests</h1>
 
-    <form action="summary" method="post" class="">
+    <h5 class="message">Please select one of each interests or an error will occur</h5>
+
+    <h5 id="output"></h5>
+
+    <form action="summary" method="post" class="" name="form">
 
     <b>In-door interests</b>
 
